--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="element__subscription">
                     <h3 class="element__title">Карачаевск</h3>
                     <button class="element__like" src="" alt=""><img class="element__like-foto" src="./images/like.svg"
-                            alt="">
+                            alt="лайк">
                     </button>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                 <div class="element__subscription">
                     <h3 class="element__title">Гора Эльбрус</h3>
                     <button class="element__like" src="" alt=""><img class="element__like-foto" src="./images/like.svg"
-                            alt="">
+                            alt="лайк">
                     </button>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                 <div class="element__subscription">
                     <h3 class="element__title">Домбай</h3>
                     <button class="element__like" src="" alt=""><img class="element__like-foto" src="./images/like.svg"
-                            alt="">
+                            alt="лайк">
                     </button>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                 <div class="element__subscription">
                     <h3 class="element__title">Гора Эльбрус</h3>
                     <button class="element__like" src="" alt=""><img class="element__like-foto" src="./images/like.svg"
-                            alt="">
+                            alt="лайк">
                     </button>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                 <div class="element__subscription">
                     <h3 class="element__title">Домбай</h3>
                     <button class="element__like" src="" alt=""><img class="element__like-foto" src="./images/like.svg"
-                            alt="">
+                            alt="лайк">
                     </button>
                 </div>
             </div>
@@ -86,7 +86,7 @@
                 <div class="element__subscription">
                     <h3 class="element__title">Карачаево-Черкессия</h3>
                     <button class="element__like" src="" alt=""><img class="element__like-foto" src="./images/like.svg"
-                            alt="">
+                            alt="лайк">
                     </button>
                 </div>
             </div>
