--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1 class="profile__title"></h1>
                 <p class="profile__subtitle"></p>
                 <button class="profile__edit-button" type="submit"><img class="profile__edit-button-foto"
-                        src="<%=require('./images/ручка.svg')%>" alt="редактировать">
+                        src="<%=require('./images/pencil.svg')%>" alt="редактировать">
                 </button>
             </div>
             <button class="profile__add-button" type="button"><img class="profile__add-button-foto"
