--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
             <input id="edit-subtitle" placeholder="Ссылка на картинку"
                 class="popup__form-input popup__form-input_place-subtitle" type="url" required>
             <span class="edit-subtitle-error popup__form-error"></span>
-            <button class="popup__form-submit popup__form-submit-create" type="submit">Создать</button>
+            <button class="popup__form-submit popup__form-submit-create" type="submit">Сохранить</button>
         </form>
     </div>
     <div class="popup popup_avatar_edit">
